# trader_shrek

./: .env.example  .gitignore  README.md
config/: denylist.yaml  models.yaml  risk.yaml  shrek.paper.yaml  universe.yaml
prompts/: earnings_analyst.md  filing_analyst.md  portfolio_manager.md  risk_analyst.md  timing_analyst.md  valuation_analyst.md
python/: pyproject.toml
python/shrek_ai/: __init__.py  alpaca_account.py  alpaca_data.py  backtest.py  config.py  decision_policy.py  discovery.py  filings.py  fundamentals.py  llm.py  memory.py  multi_agent.py  news.py  price_cache.py  sec_edgar.py  storage.py  transcripts.py
python/shrek_ai/agents/: __init__.py  earnings_analyst.py  filing_analyst.py  portfolio_manager.py  risk_analyst.py  timing_analyst.py  valuation_analyst.py
python/shrek_ai/data_sources/: __init__.py  alternative.py  content_extractor.py  ir_scraper.py  manager.py  news.py  research_reports.py  transcripts.py
python/shrek_ai/math/: __init__.py  bayesian.py  decisions.py  drawdown.py  exits.py  factors.py  quality.py  sizing.py  valuation.py
python/shrek_ai/scripts/: __init__.py  backtest_shrek.py  build_universe.py  manual_daily_workflow.py  post_market_review.py  research_company.py  research_portfolio.py  run_daily_research.py  run_market_hours_executor.py
python/tests/: __init__.py  test_backtest_baselines.py  test_config.py  test_decision_policy.py  test_entrypoints.py  test_market_executor_helpers.py  test_math.py  test_memory.py  test_storage.py
rust/: Cargo.toml
rust/crates/shrek-core/: Cargo.toml
rust/crates/shrek-core/src/: clock.rs  lib.rs  math.rs  money.rs  portfolio.rs  rounding.rs  types.rs
rust/crates/shrek-exec/: Cargo.toml
rust/crates/shrek-exec/src/: alpaca_client.rs  alpaca_stream.rs  api.rs  config.rs  db.rs  lib.rs  logs.rs  main.rs  order_manager.rs  reconcile.rs  risk.rs  state.rs
rust/crates/shrek-indicators/: Cargo.toml
rust/crates/shrek-indicators/src/: drawdown.rs  lib.rs  moving_average.rs  returns.rs  rolling.rs  trailing_stop.rs  volatility.rs  vwap.rs
scripts/: daily_market_execute.sh  weekly_research.sh
