[project]
name = "shrek-ai"
version = "0.1.0"
description = "Same-day online probability microtrading system"
requires-python = ">=3.11"
dependencies = [
    "polars>=1.0",
    "numpy>=2.0",
    "pyarrow>=14.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "httpx>=0.27",
    "alpaca-py>=0.35",
    "scikit-learn>=1.5",
    "rich>=13.0",
    "duckdb>=1.0",
    "pyyaml>=6.0",
    "zoneinfo>=0.0",  # Built-in in Python 3.9+
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
