[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shrek-ai"
version = "0.1.0"
description = "AI-assisted long-term fundamental investing agent"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Proprietary"}
authors = [
    {name = "Shrek Team"}
]
keywords = ["trading", "investing", "ai", "fundamental", "alpaca"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: Other/Proprietary",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Data handling
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "pyarrow>=12.0.0",
    "duckdb>=0.9.0",
    
    # Configuration
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    
    # HTTP requests
    "requests>=2.31.0",
    "httpx>=0.24.0",
    
    # Alpaca SDK
    "alpaca-trade-api>=3.0.0",
    
    # SEC EDGAR
    "sec-edgar-downloader>=4.0.0",
    
    # LLM
    "ollama>=0.1.0",
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    
    # Data processing
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    
    # Date/time
    "python-dateutil>=2.8.0",
    "pytz>=2023.3",
    
    # Math
    "scipy>=1.10.0",
    "scikit-learn>=1.3.0",
    
    # Storage
    "sqlalchemy>=2.0.0",
    
    # Logging
    "loguru>=0.7.0",
    
    # Testing
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "pytest-cov>=4.1.0",
]

[project.scripts]
shrek-build-universe = "shrek_ai.scripts.build_universe:main"
shrek-research-company = "shrek_ai.scripts.research_company:main"
shrek-daily-research = "shrek_ai.scripts.run_daily_research:main"
shrek-market-executor = "shrek_ai.scripts.run_market_hours_executor:main"
shrek-post-market = "shrek_ai.scripts.post_market_review:main"
shrek-backtest = "shrek_ai.scripts.backtest_shrek:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["shrek_ai*"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
