[workspace]
members = [
    "crates/shrek-core",
    "crates/shrek-exec",
    "crates/shrek-indicators",
]
resolver = "2"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "chrono"] }
rust_decimal = { version = "1.33", features = ["serde"] }
config = "0.14"
uuid = { version = "1.6", features = ["v4", "serde"] }
