[package]
name = "shrek-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
chrono-tz = "0.8"
anyhow = { workspace = true }
thiserror = { workspace = true }
rust_decimal = { workspace = true }
uuid = { workspace = true }
