[package]
name = "shrek-exec"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
shrek-core.workspace = true
shrek-indicators.workspace = true

tokio.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
reqwest.workspace = true
sqlx.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
config.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
chrono-tz.workspace = true
rust_decimal.workspace = true
uuid.workspace = true
anyhow.workspace = true
thiserror.workspace = true
clap.workspace = true
