[package]
name = "shrek-exec"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "shrek-exec"
path = "src/main.rs"

[dependencies]
shrek-core = { path = "../shrek-core" }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
tokio = { workspace = true }
reqwest = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sqlx = { workspace = true }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
config = { workspace = true }
uuid = { workspace = true }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
chrono-tz = "0.8"
